# specfront_ai

./: .gitignore  PIP_PACKAGING_GUIDE.md  README.md  pyproject.toml  requirements.txt  user_manual.md
.github/agents/: README.md  specfront-ai-analyze.agent.md  specfront-ai-api-contracts.agent.md  specfront-ai-clarify.agent.md  specfront-ai-constitution.agent.md  specfront-ai-planner.agent.md  specfront-ai-tester.agent.md  specfront-ai.agent.md  techfront_ai.agent.md  techfront_ai_coder.agent.md  techfront_ai_planner.agent.md  techfront_ai_tester.agent.md
specfront_ai/: __init__.py  cli.py  mcp_server.py  templates.py
specfront_ai/servers/: __init__.py  figma_mcp.py  github_mcp.py  jira_mcp.py
techfront_ai/: cli.py  mcp_server.py  templates.py
techfront_ai/servers/: __init__.py  figma_mcp.py  github_mcp.py  jira_mcp.py
test_workspace/.github/agents/: specfront-ai-coder.agent.md  specfront-ai-design.agent.md  specfront-ai-designtokens.agent.md  specfront-ai-html.agent.md  specfront-ai-implement.agent.md  specfront-ai-tasks.agent.md  specfront-ai.agent.md  specfront-backend.agent.md  specfront-deployer.agent.md  specfront-frontend.agent.md  specfront-planner.agent.md  specfront-tester.agent.md  techfront_ai.agent.md  techfront_ai_coder.agent.md  techfront_ai_planner.agent.md  techfront_ai_tester.agent.md
test_workspace/.spec/memory/: api-contracts.md  constitution.md
test_workspace/.spec/prompts/: code-review-prompt.md  refactor-prompt.md
test_workspace/.spec/security/: compliance-rules.md
test_workspace/specs/: 01_hotel_inventory.md
(+10 files in other folders)
